--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniela Costa - Psicóloga Clínica</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header class="cabecalho">
