Estilizando a landing page com cores e fontes

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="images/sublogo_medium.png" style="width: 140px;" class="cabecalho-imagem">
+        <img src="images/logo_cor-branca.PNG" style="width: 300px; height: 300px;" class="cabecalho-imagem">
         <nav class="cabecalho-menu">
             <a href="#" class="cabecalho-menu-item">Home</a>
             <a href="#" class="cabecalho-menu-item">Trabalhos</a>
@@ -25,9 +25,9 @@
                 <h1 class="conteudo-principal-escrito-titulo1">Psicóloga Daniela Costa</h1>
                 <h2 class="conteudo-principal-escrito-titulo2">CRP 03/25722</h2>
                 <p class="conteudo-principal-escrito-paragrafo">Viabilizando uma escuta atenta e humana! Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic id rerum sit voluptatum a ipsum, nemo aspernatur! Nam unde perspiciatis sit tenetur ducimus maiores officia architecto ipsa amet, eos cupiditate.</p>
-                <button class="conteudo-principal-botao">AGENDE AGORA</button>
+                <button class="conteudo-principal-botao"><a href="#">Agende agora</a></button>
             </div>
-                <div class="conteudo-principal-modelo_imagem"></div>
+                <img src="images/imagem-perfil.jpg" style="width: 450px; border-radius: 50%;">
         </section>
         
         <div class="conteudo-secundario">
