--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -11,11 +11,10 @@
     <header class="cabecalho">
         <img src="images/logo_cor-branca.PNG" style="width: 300px; height: 300px;" class="cabecalho-imagem">
         <nav class="cabecalho-menu">
-            <a href="#" class="cabecalho-menu-item">Home</a>
-            <a href="#" class="cabecalho-menu-item">Trabalhos</a>
-            <a href="#" class="cabecalho-menu-item">Saiba Mais</a>
-            <a href="#" class="cabecalho-menu-item">Contato</a>
-            <a href="#" class="cabecalho-menu-item">FAQ</a>
+            <a href="index.html" class="cabecalho-menu-item">Home</a>
+            <a href="https://mail-attachment.googleusercontent.com/attachment/u/4/?ui=2&ik=138c6d8302&attid=0.1&permmsgid=msg-a:r-5092272686735365874&th=18b9b0a251c30892&view=att&disp=inline&saddbat=ANGjdJ9BTiXtmOXiFw22QFOJuF0P_0slnhwRqGxUbGnzJJPJCjXHXbCgd558Ai02upmd7zxYXGeXLt-Hz2Yb3OscBv-sE63kk-EI_FEAivioTQhsrvqLyuvZhHG2XBWlsND0AhMx_dWuTj9cyielwxxKlRVin3HyBoQ6KSZpZd44Xwf94Sl7RnQFChErEBh7ReoD6no7MzSpOG35GW4M1hyIKbsiQ_nZ-yzl1VFHd4kVq8pMGzm3PByi-BO_7alzW9vNRxbSFojH_S90eHV1bUUVidgkZghjzow2YSwRSerjrOHTjJwbp4teur0Aps1mEWTL2AFn2-w_BZ2HiCrdvrMgT_LniS4d9QvsFC7BnJEuS4onErykkcmsJUEPEdd588X3B9C29LDGp4EKDsSIxoOvcwKw1x0CzDaQ4_2t3hGKwuIXy5pkWuWjmXbU368hLosw29lHUHnbRv7N0AFLASOLJJX71SAVFZvSwLdmO-Tx4zchPNCNyH1PlQ6HFu5JemQRY27Q47_5mdB-1AbWwm4CuqOStA5_yaX0ME0tN7Bb-gdrM0p_T5yRBhZedhGVIfHPHB-WBKmKP6i4Hd5hBanIDqvo1e_t2PLMqtpxcibwrga8cXXjcPWsOn7UvM17D_Nl-MSSEXvgT1Rg0WLcW-gecR3EehFtSeIF4UQCvNoC5umvEoRZLvAZaKv_h6AJKyCCcmLqI9AgrhLem_oohs3WBKofsPABBsxWoNTPfnUBW1hZ0cGxc8wgvpBJ1P_QRtZYF6zkO55ioKl9viQCq6keDxq9Km1l5TTk8EhHz-La6QC3t9qDbPbYZydxSdRQWC8_MSHOcTagC3FUYG4EXplgai4z5rt1eljj2oxH3gNdDnWTEmPRVBgF3yoSpMrdyrUO2177bvVl3McXeKaIQ88jEllTbQCFdf7j6SmM7w-TR86pnt1n5pnJlVSefrA8PjDRsluKmRkaYRSlCnMY9hKMdYoryYeA6tl8JtvK9H9B-2hcJAekL91BAJqnQzEnxsQprnysWpSkE_2oint-qBcLSAWW1VH2pDemLZrknQlVr2REU3W69vlFxfcvQxtQV55e-CRAQFVa0Q4YKgc3_v7dlxwjXeUqCK6k_3dvRg" target="_blank" class="cabecalho-menu-item">Trabalhos</a>
+            <a href="#prgf1" class="cabecalho-menu-item">Saiba Mais</a>
+            <a href="#contato" class="cabecalho-menu-item">Contato</a>
         </nav>
     </header>
 
@@ -27,7 +26,7 @@
                 <p class="conteudo-principal-escrito-paragrafo">Viabilizando uma escuta atenta e humana! Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic id rerum sit voluptatum a ipsum, nemo aspernatur! Nam unde perspiciatis sit tenetur ducimus maiores officia architecto ipsa amet, eos cupiditate.</p>
                 <button class="conteudo-principal-botao"><a href="#">Agende agora</a></button>
             </div>
-                <img src="images/imagem-perfil.jpg" style="width: 450px; border-radius: 50%;">
+                <img src="images/imagem-perfil.jpg" style="width: 420px; border-radius: 50%;">
         </section>
         
         <div class="conteudo-secundario">
@@ -39,29 +38,38 @@
         <div class="conteudo-terciario">
             <p style="font-size: 24px; font-weight: bold;" class="conteudo-terciario-imagens">Galeria</p>
             <div class="conteudo-terciario-imagens-secao">
-                <img src="images/cartao1_medio.png" class="conteudo-terciario-imagens-secao-item" style="width: 512px;">
-                <img src="images/cartao2_medio.png" class="conteudo-terciario-imagens-secao-item" style="width: 512px;">
-                <img src="images/formatura_grande.jpg" style="width: 512px;" class="conteudo-terciario-imagens-secao-item">
+                <picture>
+                    <source media="(max-width: 300px)" srcset="images/CARTAO DANIELAFRENTE_page-0001-peq.jpg">
+                    <img src="images/CARTAO DANIELAFRENTE_page-0001.jpg" class="conteudo-terciario-imagens-secao-item" style="width: 512px;">
+                </picture>
+                <picture>
+                    <source media="(max-width: 300px)" srcset="images/CARTAOVERSO_page-0001-peq.jpg">
+                    <img src="images/CARTAOVERSO_page-0001.jpg" class="conteudo-terciario-imagens-secao-item" style="width: 512px;">
+                </picture>
+                <picture>
+                    <source media="(max-width: 300px)" srcset="images/formatura_peq.jpg">
+                    <img src="images/formatura_grande.jpg" style="width: 512px;" class="conteudo-terciario-imagens-secao-item">
+                </picture>
             </div>
         </div>
 
         <div class="conteudo-quaternario">
             <div class="conteudo-quaternario-secao1">
-                <p style="font-size: 24px; font-weight: bold;" class="conteudo-quaternario-secao1-paragrafo">Redes Sociais</p>
+                <p style="font-size: 24px; font-weight: bold;" class="conteudo-quaternario-secao1-paragrafo" id="contato">Redes Sociais</p>
                 <ul class="conteudo-quaternario-secao1-lista">
-                    <li class="conteudo-quaternario-secao1-lista-item"><a href="#" target="_blank">Instagram</a></li><li class="conteudo-quaternario-secao1-lista-item"><a href="#" target="_blank">Twitter</a></li><li class="conteudo-quaternario-secao1-lista-item"><a href="#" target="_blank">LinkedIn</a></li>
-                    <li class="conteudo-quaternario-secao1-lista-item"><a href="#" target="_blank">Telegram</a></li>
+                    <li class="conteudo-quaternario-secao1-lista-item"><a href="https://www.instagram.com/__daniela.costa/" target="_blank">Instagram</a></li>
+                    <li class="conteudo-quaternario-secao1-lista-item"><a href="mailto: psicologadanielacosta@gmail.com" target="_blank">Email</a></li><li class="conteudo-quaternario-secao1-lista-item"><a href="https://twitter.com/psi_danicosta" target="_blank">Twitter</a></li><li class="conteudo-quaternario-secao1-lista-item"><a href="https://www.linkedin.com/in/daniela-costa-de-lima-304423234/" target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
-        </div>
 
-        <div class="conteudo-quaternario-secao2">
-            <p class="conteudo-quaternario-secao2-paragrafo">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet adipisci voluptatem architecto odio quia maiores eos delectus alias. Hic sunt dignissimos quod totam, quas itaque. Aspernatur, optio. Labore, officiis nesciunt?" - Tal Pessoa.</p>
+            <div class="conteudo-quaternario-secao2">
+                <p class="conteudo-quaternario-secao2-paragrafo">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet adipisci voluptatem architecto odio quia maiores eos delectus alias. Hic sunt dignissimos quod totam, quas itaque. Aspernatur, optio. Labore, officiis nesciunt?" - Tal Pessoa.</p>
+            </div>
         </div>
     </main>
 
     <footer class="conteudo-rodape">
         <p class="conteudo-rodape-paragrafo">Criado por André Lima.</p>
-    </footer>   
+    </footer>      
 </body>
 </html>
