Adicionando link externo no botão

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1 class="conteudo-principal-escrito-titulo1">Psicóloga Daniela Costa</h1>
                 <h2 class="conteudo-principal-escrito-titulo2">CRP 03/25722</h2>
                 <p class="conteudo-principal-escrito-paragrafo">Viabilizando uma escuta atenta e humana! Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic id rerum sit voluptatum a ipsum, nemo aspernatur! Nam unde perspiciatis sit tenetur ducimus maiores officia architecto ipsa amet, eos cupiditate.</p>
-                <button class="conteudo-principal-botao"><a href="#">Agende agora</a></button>
+                <button class="conteudo-principal-botao"><a href="https://api.whatsapp.com/send/?phone=5574999329132&text&type=phone_number&app_absent=0" target="_blank">Agende agora</a></button>
             </div>
                 <img src="images/imagem-perfil.jpg" style="width: 420px; border-radius: 50%;">
         </section>
