Atualizando conteúdo dos parágrafos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo1">Psicóloga Daniela Costa</h1>
                 <h2 class="conteudo-principal-escrito-titulo2">CRP 03/25722</h2>
-                <p class="conteudo-principal-escrito-paragrafo">Viabilizando uma escuta atenta e humana! Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic id rerum sit voluptatum a ipsum, nemo aspernatur! Nam unde perspiciatis sit tenetur ducimus maiores officia architecto ipsa amet, eos cupiditate.</p>
+                <p class="conteudo-principal-escrito-paragrafo">É uma satisfação enorme trabalhar com a Psicologia. Atuo enquanto Psicóloga Clínica, atendo adolescentes e adultos, de forma online (para todo o Brasil) e presencial (nas cidades de Irecê/BA e Jussara/BA). Tenho especialização em Saúde Mental, Psicopatologia e Atenção Psicossocial.</p>
+                <p class="conteudo-principal-escrito-paragrafo">Caso você tenha interesse ou alguma dúvida sobre os atendimentos, me manda uma mensagem, estou à disposição para te responder.</p>
                 <button class="conteudo-principal-botao"><a href="https://api.whatsapp.com/send/?phone=5574999329132&text&type=phone_number&app_absent=0" target="_blank">Agende agora</a></button>
             </div>
                 <img src="images/imagem-perfil.jpg" style="width: 420px; border-radius: 50%;">
@@ -31,8 +32,10 @@
         
         <div class="conteudo-secundario">
             <p style="font-size: 24px; font-weight: bold;" class="conteudo-secundario-paragrafo" id="prgf1">Sobre mim</p>
-            <p class="conteudo-secundario-paragrafo" id="prgf2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae delectus impedit unde accusantium, iure fugit. Qui totam est repudiandae nesciunt magnam, nisi corrupti. Blanditiis, quam? Recusandae itaque ipsam vel aut! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium neque culpa atque pariatur cupiditate. Enim non, voluptatem, obcaecati vero magni officiis tempore ex est eum fuga quo, voluptatum incidunt quibusdam.</p>
-            <p class="conteudo-secundario-paragrafo" id="prgf3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi consequatur quos inventore sunt suscipit totam nihil dolores perferendis doloremque ipsum maiores, praesentium delectus laudantium porro, alias adipisci? Quibusdam, totam sequi.</p>
+            <p class="conteudo-secundario-paragrafo" id="prgf2">
+                Meu manejo clínico visa o cuidado e prevenção em saúde mental, autoconhecimento, autoestima, autonomia e autopercepção, além de lidar com demandas como racismo, relacionamento, profissão, gênero e orientação sexual. Ouvir e acolher a demanda do outro é muito importante. Neste sentido, busco propor aos meus pacientes uma escolha profissional e atenta que acolha os sintomas, as faltas e os desejos que atravessam a existência humana.
+                </p>
+            <p class="conteudo-secundario-paragrafo" id="prgf3">Ouvir diz sobre acessar o íntimo do outro, e para tanto busco o aperfeiçoamento e estar apta a acolher de forma humanizada as demandas que surgem dos meus pacientes. Afinal, na Psicoterapia auxiliamos a pessoa no autoconhecimento, assim possibilitando que o próprio sujeito dê contorno as suas questões.</p>
         </div>
 
         <div class="conteudo-terciario">
@@ -68,7 +71,7 @@
             </div>
 
             <div class="conteudo-quaternario-secao2">
-                <p class="conteudo-quaternario-secao2-paragrafo">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet adipisci voluptatem architecto odio quia maiores eos delectus alias. Hic sunt dignissimos quod totam, quas itaque. Aspernatur, optio. Labore, officiis nesciunt?" - Tal Pessoa.</p>
+                <p class="conteudo-quaternario-secao2-paragrafo">"O Ser humano sabe fazer dos obstáculos novos caminhos, porque à vida basta o espaço de uma fresta para renascer." - Ernesto Sabato</p>
             </div>
         </div>
     </main>
